# reVX

./: pyproject.toml
reVX/: version.py
reVX/exclusions/: base.py  regulations.py
reVX/exclusions/blade_clearance/: README.md  _cli.py  blade_clearance.py  regulations.py
reVX/exclusions/max_height/: README.md  _cli.py  max_height.py  regulations.py
reVX/exclusions/setbacks/: README.md  _cli.py  base.py  regulations.py  setbacks.py
reVX/exclusions/turbine_flicker/: turbine_flicker.py
reVX/handlers/: geopackage.py
reVX/least_cost_xmission/: least_cost_paths.py  trans_cap_costs.py
tests/: test_exclusions_blade_clearance.py  test_exclusions_max_height.py  test_exclusions_setbacks.py  test_handlers_geopackage.py
